# synth_front

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  imgui.ini  justfile  package-lock.json
.github/workflows/: build.yml
src/: main.cpp
src/audio/: audio.cpp  audio.h
src/input/: input.cpp  input.h
src/midi/: midi_input.cpp  midi_input.h  midi_input_alsa.cpp  midi_input_coremidi.cpp  midi_input_win32.cpp
src/protocol/: framebuffer.cpp  framebuffer.h  packet.cpp  protocol.h
src/render/: renderer.cpp  renderer.h
src/serial/: serial_port.c  serial_port.h  serial_port_posix.c  tcp_socket.c  tcp_socket.h  usb_detect.cpp  usb_detect.h
tests/: test_framebuffer.cpp  test_protocol.cpp
